Update dependencies and enhance CORS and security configuration
Updated several dependencies in `package-lock.json`, including `@babel`, `axios`, and `vite`. Enhanced CORS settings in `RestSecurityConfig` by specifying allowed headers, exposed headers, and adding annotations for improved filter chain ordering.